--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -81,12 +81,12 @@
     <ControlTemplate x:Key="MetroWindowTemplate" TargetType="{x:Type Window}">
         <Border Background="{StaticResource mainColorBrush}" 
                 BorderThickness="1" BorderBrush="{StaticResource mainColorBrush}">
-            <Grid>
+            <Grid x:Name="LayoutRoot">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="24"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-
+                <!--标题栏-->
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -102,27 +102,35 @@
                     <CheckBox x:Name="MaxWinButton" Grid.Column="3" Style="{StaticResource WinMaxBtnStyle}"/>
                     <Button x:Name="CloseWinButton" Grid.Column="4" Style="{StaticResource WinMinCloseBtnStyle}"/>
                 </Grid>
-
+                <!--内容部分-->
                 <AdornerDecorator Grid.Row="1">
                     <ContentPresenter/>
                 </AdornerDecorator>
             </Grid>
         </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="WindowState" Value="Maximized">
+                <Setter Property="Margin" Value="6,6,6,0" TargetName="LayoutRoot"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <Style x:Key="MetroWindowStyle" TargetType="{x:Type Window}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="True"/>
-        <Setter Property="AllowsTransparency" Value="True"/>
+        <Setter Property="MinHeight" Value="300"/>
+        <Setter Property="MinWidth" Value="400"/>
         <Setter Property="WindowStyle" Value="None"/>
-        <Setter Property="MaxWidth" Value="{Binding Source={x:Static SystemParameters.WorkArea}, Path=Width}"/>
-        <Setter Property="MaxHeight" Value="{Binding Source={x:Static SystemParameters.WorkArea}, Path=Height}"/>
         <Setter Property="Template" Value="{StaticResource MetroWindowTemplate}"/>
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
                 <!--允许调整窗口大小-->
-                <WindowChrome GlassFrameThickness="16" CornerRadius="0" CaptionHeight="0"
-                              UseAeroCaptionButtons="False" ResizeBorderThickness="4" />
+                <WindowChrome GlassFrameThickness="-1" 
+                              CornerRadius="0" 
+                              CaptionHeight="0"
+                              UseAeroCaptionButtons="False"
+                              NonClientFrameEdges="Bottom"
+                              ResizeBorderThickness="4" />
             </Setter.Value>
         </Setter>
     </Style>
