--- a/Controls/MBTabItem.xaml
+++ b/Controls/MBTabItem.xaml
@@ -2,31 +2,51 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          Loaded="TabItem_Loaded"
-         MinHeight="20"
+         MinHeight="24"
          >
     <TabItem.Template>
         <ControlTemplate TargetType="{x:Type TabItem}">
-            <Border>
+            <Border x:Name="BD" BorderBrush="{StaticResource darkBorderBrush}" 
+                    BorderThickness="1"
+                    CornerRadius="4,4,0,0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="20"/>
                     </Grid.ColumnDefinitions>
-                    <ContentPresenter Grid.Column="0" ContentSource="Header" 
-                                      HorizontalAlignment="Left" 
+                    <ContentPresenter x:Name="CP" Grid.Column="0" 
+                                      ContentSource="Header" 
+                                      TextElement.Foreground="White"
+                                      Margin="2"
+                                      HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Center"/>
-                    <Button Grid.Column="1" Name="btn_Close" 
+                    <Button Grid.Column="1" Name="CloseBtn" 
                             Width="16" Height="16"
-                            Content="x"
+                            x:Uid="0"
+                            Template="{StaticResource TabItemCloseBtnTemplate}"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Click="CloseBtn_Click"/>
                 </Grid>
             </Border>
             <ControlTemplate.Triggers>
-                
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsSelected" Value="False"/>
+                        <Condition Property="IsMouseOver" Value="True"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="Background" Value="{StaticResource mainHighBrush}" TargetName="BD"/>
+                </MultiTrigger>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="TextElement.Foreground" Value="Black" TargetName="CP"/>
+                    <Setter Property="Background" Value="White" TargetName="BD"/>
+                    <Setter Property="BorderThickness" Value="2,2,2,0" TargetName="BD"/>
+                    <Setter Property="Uid" Value="1" TargetName="CloseBtn"/>
+                </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </TabItem.Template>
-    <Grid/>
+    <Grid>
+        <TextBox x:Name="textBox"/>
+    </Grid>
 </TabItem>
