添加了文件相关的类以及测试用例

--- a/Controls/MainWindow.xaml
+++ b/Controls/MainWindow.xaml
@@ -11,6 +11,14 @@
         <!--<TabControl>
             <local:MBTabItem Header="测试">
             </local:MBTabItem>
+            <local:MBTabItem Header="测试">
+            </local:MBTabItem>
+            <local:MBTabItem Header="测试">
+            </local:MBTabItem>
+            <local:MBTabItem Header="测试">
+            </local:MBTabItem>
+            <local:MBTabItem Header="测试">
+            </local:MBTabItem>
         </TabControl>-->
         <local:FlowChartContainer/>
 
