--- a/Controls/FlowChartContainer.xaml
+++ b/Controls/FlowChartContainer.xaml
@@ -1,12 +1,9 @@
 ﻿<UserControl x:Class="MultiBranchTexter.FlowChartContainer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiBranchTexter"
              Loaded="UserControl_Loaded"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             >
     <ScrollViewer x:Name="scrollViewer" Background="White"
                   VerticalScrollBarVisibility="Auto" 
                   HorizontalScrollBarVisibility="Auto">
@@ -14,9 +11,10 @@
               Width="Auto" Height="Auto" 
               HorizontalAlignment="Left" 
               VerticalAlignment="Top">
-            <Button x:Name="b1" Width="40" Margin="10" Height="20"/>
-            <local:ConnectingLine x:Name="line"/>
-            <Button x:Name="b2" Width="40" Margin="400,503,3,3" Height="20"/>
+            <local:NodeButton x:Name="b1" Width="40" Margin="10" Height="20"/>
+            <local:NodeButton x:Name="b2" Width="40" Margin="200,200,0,0" Height="20"/>
+            <local:NodeButton x:Name="b4" Width="40" Margin="10,503,0,0" Height="20"/>
+            <local:NodeButton x:Name="b3" Width="40" Margin="400,603,0,0" Height="20"/>
         </Grid>
     </ScrollViewer>
 </UserControl>
