--- a/Controls/NodeButton.xaml
+++ b/Controls/NodeButton.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="MultiBranchTexter.NodeButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             MinWidth="80" 
+             Width="100" 
              HorizontalAlignment="Left" VerticalAlignment="Top"
              >
     <Border x:Name="bgBorder" Padding="4"
