现在按下ctrl可以调整放大缩小

--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -232,7 +232,7 @@
 
 
     <ControlTemplate x:Key="greatScrollViewerTemplate" TargetType="{x:Type ScrollViewer}">
-        <Grid>
+        <Grid Background="White">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
